# blog_on_flask

./: pyproject.toml
app/: app.py  config.py  main.py  models.py  view.py
app/posts/: blueprint.py
app/posts/templates/posts/: index.html  post_detail.html
app/templates/: base.html  index.html
