[tool.poetry]
name = "blog_on_flask"
version = "0.1.0"
description = ""
authors = ["a-yanovskiy <a.e.yanovskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
mysql-connector-python = "^8.0.30"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
